Fixing current xp bar text alignment

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -73,6 +73,7 @@ a {
     border-radius: 4px;
     background: var(--gray-line);
     margin: 0 1.5rem;
+    position: relative;
 }
 
 .experience-bar > div > div {
